added def generate_email

--- a/emailGeneratorProject/mailGenerator/templates/home.html
+++ b/emailGeneratorProject/mailGenerator/templates/home.html
@@ -7,9 +7,9 @@
 
     <label for="mail_domain"></label>
     <select name="mail_domain" id="mail_domain">
-        <option value="gmail.com">Gmail</option>
-        <option value="wp.pl">Wp</option>
-        <option value="onet.pl">Onet</option>
+        <option value="Gmail">Gmail</option>
+        <option value="Wp">Wp</option>
+        <option value="Onet">Onet</option>
     </select>
 <br>
     <label for="length"></label>
