--- a/emailGeneratorProject/mailGenerator/templates/about.html
+++ b/emailGeneratorProject/mailGenerator/templates/about.html
@@ -1,15 +1,19 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="pl">
+	<head>
+		{% load static %}
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="{% static 'css/about.css' %}">
+		<title>EMAIL GENERATOR</title>
+	</head>
+	<body>
+		<h1>Created by</h1>
+		<h2>Kamila Czajkowska</h2>
 
-
-{% block content %}
-
-<h1>Created by</h1>
-<h2>Kamila Czajkowska</h2>
-
-<form action="{%url 'home' %}" method="post">
-    {% csrf_token %}
-    <input type="submit" value="Generate">
-</form>
-
-{% endblock content %}
-    
+		<form action="{%url 'home' %}" method="post">
+			{% csrf_token %}
+			<input type="submit" value="Back to generate" />
+		</form>
+	</body>
+</html>
