--- a/emailGeneratorProject/mailGenerator/templates/base.html
+++ b/emailGeneratorProject/mailGenerator/templates/base.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMAIL GENERATOR</title>
-</head>
-<body>
-    {% block content %}
-    {% endblock content %}
-</body>
+	<head>
+		{% load static %}
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="{% static 'css/main.css' %}">
+		<title>EMAIL GENERATOR</title>
+	</head>
+	<body>
+		{% block content %} {% endblock content %}
+	</body>
 </html>
-
